# forza-dualsense

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs  install.ps1  uninstall.ps1
.github/workflows/: release.yml
assets/: NOTICE.md  make_icon.py
assets/web/: index.html
src/: controller.rs  gui.rs  hid.rs  hid_task.rs  logs.rs  main.rs  settings.rs  state.rs  telemetry.rs  tray.rs  triggers.rs  udp.rs  update.rs  web.rs
