[workspace]

[package]
name = "forza-dualsense"
version = "1.0.4"
edition = "2021"
description = "Adaptive trigger feedback for Forza Horizon on the DualSense controller"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ksc98/forza-dualsense"
default-run = "forza-dualsense"

[[bin]]
name = "forza-dualsense"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
hidapi = "2.6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Web server
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"

# Native GUI
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"
egui_plot = "0.35"

dirs = "6"

# Self-update against GitHub Releases
# 0.44 fails to build (upstream type-inference regression). Pinned at 0.41.
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate"] }

# `image` decodes the embedded PNG into the RGBA the tray crate wants;
# pulled in unconditionally because it's small and might also be useful
# for other icon work later.
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
# System-tray icon + minimize-to-tray. Windows-only because the Linux
# build of `tray-icon` requires GTK, which we don't want to demand.
tray-icon = "0.24"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
